fix: overflow when changing screen size

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@
 
 html,
 body {
+  overflow: hidden;
   height: 100%;
 }
 
